--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <canvas id="particles-js"></canvas>
 
   <nav class="navbar">
-    <div class="container" style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+    <div class="container nav-container">
 
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Work</a></li>
-        <li><a href="#experience">Experience</a></li>
+        <li><a href="#experience">Exp.</a></li> <!-- Shortened for mobile fit safety -->
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <div class="social-mini" style="display: flex; gap: 16px;">
+      <div class="nav-socials">
         <a href="https://github.com" target="_blank" aria-label="GitHub">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
             stroke-linecap="round" stroke-linejoin="round">
@@ -339,11 +339,11 @@
       init() {
         this.x = Math.random() * canvas.width;
         this.y = Math.random() * canvas.height;
-        this.vx = (Math.random() - 0.5) * 0.6;
-        this.vy = (Math.random() - 0.5) * 0.6;
+        this.vx = (Math.random() - 0.5) * 0.3;
+        this.vy = (Math.random() - 0.5) * 0.3;
         this.size = Math.random() * 2 + 0.5;
         this.alpha = Math.random() * 0.5 + 0.2;
-        this.twinkleSpeed = Math.random() * 0.04 + 0.01;
+        this.twinkleSpeed = Math.random() * 0.02 + 0.005;
       }
 
       update() {
@@ -361,38 +361,72 @@
       draw() {
         ctx.fillStyle = `rgba(255, 255, 255, ${this.alpha})`;
         ctx.beginPath();
+        // Removed shadowBlur for performance
         ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
         ctx.fill();
-
-        // Subtle glow
-        if (this.size > 1.5) {
-          ctx.shadowBlur = 10;
-          ctx.shadowColor = 'rgba(34, 211, 238, 0.5)';
-        } else {
-          ctx.shadowBlur = 0;
-        }
       }
     }
 
-    for (let i = 0; i < 120; i++) {
+    // Reduced particle count for better mobile performance
+    const particleCount = window.innerWidth < 768 ? 60 : 100;
+    for (let i = 0; i < particleCount; i++) {
       particles.push(new Particle());
     }
 
 
-
-
     function animate() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear only once per frame
 
-      particles.forEach(p => {
+      // Mouse interaction
+      if (!window.mouseListenersAdded) {
+        window.mouseListenersAdded = true;
+        window.mouse = { x: null, y: null };
+        window.addEventListener('mousemove', (e) => {
+          window.mouse.x = e.x;
+          window.mouse.y = e.y;
+        });
+        window.addEventListener('mouseleave', () => {
+          window.mouse.x = null;
+          window.mouse.y = null;
+        });
+      }
+
+      const mouse = window.mouse || { x: null, y: null };
+
+      for (let i = 0; i < particles.length; i++) {
+        let p = particles[i];
         p.update();
         p.draw();
 
-        // Connect to other particles
-        particles.forEach(p2 => {
+        // Connect to mouse and gentle attraction
+        if (mouse.x != null) {
+          const dx = p.x - mouse.x;
+          const dy = p.y - mouse.y;
+          const dist = Math.sqrt(dx * dx + dy * dy);
+          if (dist < 200) {
+            ctx.strokeStyle = `rgba(34, 211, 238, ${0.3 * (1 - dist / 200)})`;
+            ctx.lineWidth = 1;
+            ctx.beginPath();
+            ctx.moveTo(p.x, p.y);
+            ctx.lineTo(mouse.x, mouse.y);
+            ctx.stroke();
+
+            // Gentle attraction
+            const force = (200 - dist) / 200;
+            const fx = dx / dist * force * 0.5;
+            const fy = dy / dist * force * 0.5;
+            p.x -= fx;
+            p.y -= fy;
+          }
+        }
+
+        // Optimized connection loop (O(N^2)/2)
+        for (let j = i + 1; j < particles.length; j++) {
+          let p2 = particles[j];
           const dx = p.x - p2.x;
           const dy = p.y - p2.y;
           const dist = Math.sqrt(dx * dx + dy * dy);
+
           if (dist < 120) {
             ctx.strokeStyle = `rgba(34, 211, 238, ${0.15 * (1 - dist / 120)})`;
             ctx.lineWidth = 0.6;
@@ -401,8 +435,8 @@
             ctx.lineTo(p2.x, p2.y);
             ctx.stroke();
           }
-        });
-      });
+        }
+      }
       requestAnimationFrame(animate);
     }
 
