--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#projects">Work</a></li>
-        <li><a href="#experience">Exp.</a></li> <!-- Shortened for mobile fit safety -->
+        <li><a href="#projects">Personal Projects</a></li>
+        <li><a href="#experience">Experience</a></li> <!-- Shortened for mobile fit safety -->
         <li><a href="#contact">Contact</a></li>
       </ul>
       <div class="nav-socials">
