minor styling and v1 data

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
           Hello World</h2>
         <h1 style="font-size: 72px; margin-bottom: 16px; font-weight: 800;">I'm <span class="gradient-text">Augustine
             Asumadu</span></h1>
-        <p class="subtitle">Software Engineer
-          specializing in Web Systems & AI. <br> Pursuing MS CS at Georgia Tech.</p>
+        <p class="subtitle">Fullstack software engineer at Optum Inc. (United Health Group) specializing in Web Systems
+          & AI. <br> Pursuing MS CS at Georgia
+          Institute of Technology.</p>
 
         <div class="hero-buttons">
           <a href="Resume.docx.pdf" download="Augustine_Asumadu_Resume.pdf" class="project-link-btn"
@@ -63,7 +64,7 @@
             Resume</a>
           <a href="#projects" class="project-link-btn"
             style="background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); color: #ffffff; padding: 16px 32px; border-radius: 12px; text-decoration: none; font-weight: 600; backdrop-filter: blur(10px);">Explore
-            Work</a>
+            Projects</a>
         </div>
       </div>
       <div class="profile-wrapper" style="position: relative;">
@@ -90,10 +91,19 @@
         <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
           <div>
             <h3 style="font-size: 24px; color: #ffffff;">Georgia Institute of Technology</h3>
-            <p style="color: var(--accent-cyan); font-weight: 600; margin-bottom: 4px;">M.S. Computer Science (OMSCS)
+            <p style="color: var(--accent-cyan); font-weight: 600; margin-bottom: 4px;">M.S. Computer Science
             </p>
-            <p style="color: var(--text-secondary); font-size: 14px; margin-bottom: 4px;">Concentration in Machine
-              Learning & Artificial Intelligence</p>
+            <div style="margin-bottom: 12px;">
+              <p style="color: #ffffff; font-size: 14px; margin-bottom: 4px; font-weight: 500;">Concentrations:</p>
+              <ul style="list-style: none; padding: 0; margin: 0; color: #ffffff; font-size: 14px; opacity: 0.9;">
+                <li style="display: flex; align-items: center; gap: 8px; margin-bottom: 2px;">
+                  <span style="color: var(--accent-cyan); font-size: 10px;">●</span> Machine Learning (ML)
+                </li>
+                <li style="display: flex; align-items: center; gap: 8px;">
+                  <span style="color: var(--accent-cyan); font-size: 10px;">●</span> Artificial Intelligence (AI)
+                </li>
+              </ul>
+            </div>
             <p style="color: #e9d5ff; font-weight: 500; font-size: 14px;">GPA: 4.0</p>
           </div>
           <div style="text-align: right;">
@@ -122,12 +132,15 @@
             <h3 style="font-size: 24px; color: #ffffff;">Worcester Polytechnic Institute</h3>
             <p style="color: var(--accent-cyan); font-weight: 600; margin-bottom: 4px;">B.S. Management Information
               Systems</p>
-            <p style="color: var(--text-secondary); font-size: 14px; margin-bottom: 4px;">Minor in Computer Science</p>
+            <p style="color:#ffffff; font-size: 14px; margin-bottom: 4px;">Minor in Computer Science</p>
             <p style="color: #e9d5ff; font-weight: 500; font-size: 14px;">GPA: 3.52</p>
+            <p style="color: #ffffff; font-weight: 600; margin-bottom: 5px; margin-top: 10px; font-size: 14px;">
+              Achievements:</p>
+            <span class="feature-tag" style="padding-left: -5px; font-size: 13px;">4x Deans List</span>
           </div>
           <div style="text-align: right;">
             <span class="feature-tag"
-              style="background: rgba(34, 211, 238, 0.1); border-color: rgba(34, 211, 238, 0.3); color: var(--accent-cyan);">Graduated</span>
+              style="background: rgba(74, 222, 128, 0.1); border-color: rgba(74, 222, 128, 0.3); color: #4ade80;">Graduated</span>
           </div>
         </div>
       </div>
@@ -143,7 +156,9 @@
         <div class="bento-item col-span-12 project-feature project-card-row">
           <div class="project-content"
             style="background: linear-gradient(90deg, rgba(2,6,23,0.95) 0%, rgba(2,6,23,0.8) 60%, transparent 100%);">
-            <span class="feature-tag">Live Production App</span>
+            <span class="feature-tag"
+              style="background: rgba(74, 222, 128, 0.1); border-color: rgba(74, 222, 128, 0.3); color: #4ade80;">Live
+              Production App</span>
             <h3 style="font-size: 32px; margin-bottom: 16px;">Generations</h3>
             <p style="color: var(--text-secondary); margin-bottom: 24px; max-width: 450px;">
               A comprehensive genealogy platform empowering users to track their family lineage.
@@ -168,7 +183,7 @@
         <div class="bento-item col-span-12 project-feature project-card-row">
           <div class="project-content">
             <span class="feature-tag"
-              style="background: rgba(34, 211, 238, 0.1); color: var(--accent-cyan); border: 1px solid rgba(34, 211, 238, 0.3); font-size: 11px; margin-bottom: 16px; width: fit-content; padding: 4px 12px;">In
+              style="background: rgba(168, 85, 247, 0.2); border-color: rgba(168, 85, 247, 0.4); color: #e9d5ff;">In
               Progress</span>
             <h3 style="font-size: 32px; margin: 0 0 16px 0;">Finance Budgeting App</h3>
             <p style="color: var(--text-secondary); margin-bottom: 24px; max-width: 450px;">
@@ -229,20 +244,25 @@
       <h2>Professional Experience</h2>
       <div class="bento-grid">
         <div class="bento-item col-span-6">
-          <span style="font-size: 12px; color: var(--text-secondary); margin-bottom: 8px; display: block;">2022 -
+          <span style="font-size: 12px; color: var(--text-secondary); margin-bottom: 8px; display: block;"> July 2023 -
             Present</span>
           <h3>Software Engineer</h3>
-          <p style="margin-bottom: 4px; color: var(--text-primary);">Tech Company Inc.</p>
+          <p style="margin-bottom: 2px; color: var(--text-primary);">Optum Inc. (United Health Group)</p>
+          <p style="font-size: 13px; color: var(--text-secondary); margin-bottom: 12px; font-weight: 500;">Boston, MA
+          </p>
           <p style="font-size: 14px;">Architected and implemented core features for the main product suite. Improved API
             latency by 40% through caching strategies.</p>
         </div>
         <div class="bento-item col-span-6">
-          <span style="font-size: 12px; color: var(--text-secondary); margin-bottom: 8px; display: block;">2020 -
-            2022</span>
-          <h3>Junior Engineer</h3>
-          <p style="margin-bottom: 4px; color: var(--text-primary);">Startup Co.</p>
-          <p style="font-size: 14px;">Full-stack development associated with high-growth product phases. Collaborated
-            with cross-functional teams to ship features bi-weekly.</p>
+          <span style="font-size: 12px; color: var(--text-secondary); margin-bottom: 8px; display: block;">June 2022 -
+            June 2023</span>
+          <h3>Supply Chain Leader</h3>
+          <p style="margin-bottom: 2px; color: var(--text-primary);">PepsiCo.</p>
+          <p style="font-size: 13px; color: var(--text-secondary); margin-bottom: 12px; font-weight: 500;">Killingly, CT
+          </p>
+          <p style="font-size: 14px;">Developed a real-time data collection interface to analyze
+            equipment performance. Applied data analysis to identify trends for optimizing line efficiency, reducing
+            waste, and minimizing downtime.</p>
         </div>
       </div>
     </section>
