--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
           Institute of Technology.</p>
 
         <div class="hero-buttons">
-          <a href="Resume.docx.pdf" download="Augustine_Asumadu_Resume.pdf" class="project-link-btn"
+          <!-- <a href="Resume.docx.pdf" download="Augustine_Asumadu_Resume.pdf" class="project-link-btn"
+            style="background: var(--gradient-text); color: var(--bg-deep); padding: 16px 32px; border-radius: 12px; text-decoration: none; font-weight: 700; transition: transform 0.2s, box-shadow 0.2s; box-shadow: 0 8px 24px rgba(34, 211, 238, 0.2);">Download
+            Resume</a> -->
+          <a class="project-link-btn"
             style="background: var(--gradient-text); color: var(--bg-deep); padding: 16px 32px; border-radius: 12px; text-decoration: none; font-weight: 700; transition: transform 0.2s, box-shadow 0.2s; box-shadow: 0 8px 24px rgba(34, 211, 238, 0.2);">Download
             Resume</a>
           <a href="#projects" class="project-link-btn"
