style edits to education

--- a/index.html
+++ b/index.html
@@ -81,16 +81,18 @@
 
     <!-- Education Section -->
     <section id="education">
+      <h2
+        style="font-size: 32px; margin-bottom: 24px; display: inline-flex; align-items: center; gap: 16px; border-bottom: 2px solid rgba(255, 255, 255, 0.3); padding-bottom: 16px;">
+        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="var(--accent-cyan)" stroke-width="2">
+          <path d="M22 10v6M2 10l10-5 10 5-10 5z"></path>
+          <path d="M6 12v5c3 3 9 3 12 0v-5"></path>
+        </svg>
+        Education
+      </h2>
+
+      <!-- Georgia Tech -->
       <div
-        style="background: var(--card-bg); border: 1px solid var(--card-border); border-radius: var(--radius-lg); padding: 32px; backdrop-filter: blur(20px);">
-        <h2 style="font-size: 28px; margin-bottom: 24px; display: flex; align-items: center; gap: 12px; border: none;">
-          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="var(--accent-cyan)" stroke-width="2">
-            <path d="M22 10v6M2 10l10-5 10 5-10 5z"></path>
-            <path d="M6 12v5c3 3 9 3 12 0v-5"></path>
-          </svg>
-          Education
-        </h2>
-        <!-- Georgia Tech -->
+        style="background: var(--card-bg); border: 1px solid var(--card-border); border-radius: var(--radius-lg); padding: 32px; backdrop-filter: blur(20px); margin-bottom: 20px;">
         <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
           <div>
             <h3 style="font-size: 24px; color: #ffffff;">Georgia Institute of Technology</h3>
@@ -125,11 +127,11 @@
             <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7637 Knowledge-Based AI</span>
           </div>
         </div>
+      </div>
 
-        <!-- Divider -->
-        <div style="height: 1px; background: rgba(255,255,255,0.1); margin: 32px 0;"></div>
-
-        <!-- WPI -->
+      <!-- WPI -->
+      <div
+        style="background: var(--card-bg); border: 1px solid var(--card-border); border-radius: var(--radius-lg); padding: 32px; backdrop-filter: blur(20px);">
         <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
           <div>
             <h3 style="font-size: 24px; color: #ffffff;">Worcester Polytechnic Institute</h3>
@@ -146,8 +148,19 @@
               style="background: rgba(74, 222, 128, 0.1); border-color: rgba(74, 222, 128, 0.3); color: #4ade80;">Graduated</span>
           </div>
         </div>
+        <div style="margin-top: 16px;">
+          <p style="color: #ffffff; font-weight: 600; margin-bottom: 10px; font-size: 14px;">Relevant Coursework:</p>
+          <div style="display: flex; gap: 8px; flex-wrap: wrap;">
+            <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7641 Machine Learning</span>
+            <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7643 Deep Learning</span>
+            <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 6601 Artificial Intelligence</span>
+            <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 6250 Computer Networks</span>
+            <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7637 Knowledge-Based AI</span>
+          </div>
+        </div>
       </div>
     </section>
+
 
     <!-- Projects Section (Bento Grid) -->
     <section id="projects">
