--- a/index.html
+++ b/index.html
@@ -164,7 +164,16 @@
 
     <!-- Projects Section (Bento Grid) -->
     <section id="projects">
-      <h2>Featured Projects</h2>
+      <h2
+        style="font-size: 32px; margin-bottom: 24px; display: inline-flex; align-items: center; gap: 16px; border-bottom: 2px solid rgba(255, 255, 255, 0.3); padding-bottom: 16px;">
+        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="var(--accent-cyan)" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round">
+          <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+          <line x1="8" y1="21" x2="16" y2="21"></line>
+          <line x1="12" y1="17" x2="12" y2="21"></line>
+        </svg>
+        Featured Projects
+      </h2>
       <div class="bento-grid">
 
         <!-- Featured Project: Generations -->
@@ -257,7 +266,14 @@
 
     <!-- Experience Section -->
     <section id="experience">
-      <h2>Professional Experience</h2>
+      <h2
+        style="font-size: 32px; margin-bottom: 24px; display: inline-flex; align-items: center; gap: 16px; border-bottom: 2px solid rgba(255, 255, 255, 0.3); padding-bottom: 16px;">
+        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="var(--accent-cyan)" stroke-width="2">
+          <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
+          <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+        </svg>
+        Professional Experience
+      </h2>
       <div class="bento-grid">
         <div class="bento-item col-span-6">
           <span style="font-size: 12px; color: var(--text-secondary); margin-bottom: 8px; display: block;"> July 2023 -
@@ -285,7 +301,22 @@
 
     <!-- Skills Section -->
     <section id="skills">
-      <h2>Technical Arsenal</h2>
+      <h2
+        style="font-size: 32px; margin-bottom: 24px; display: inline-flex; align-items: center; gap: 16px; border-bottom: 2px solid rgba(255, 255, 255, 0.3); padding-bottom: 16px;">
+        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="var(--accent-cyan)" stroke-width="2">
+          <rect x="4" y="4" width="16" height="16" rx="2" ry="2"></rect>
+          <rect x="9" y="9" width="6" height="6"></rect>
+          <line x1="9" y1="1" x2="9" y2="4"></line>
+          <line x1="15" y1="1" x2="15" y2="4"></line>
+          <line x1="9" y1="20" x2="9" y2="23"></line>
+          <line x1="15" y1="20" x2="15" y2="23"></line>
+          <line x1="20" y1="9" x2="23" y2="9"></line>
+          <line x1="20" y1="14" x2="23" y2="14"></line>
+          <line x1="1" y1="9" x2="4" y2="9"></line>
+          <line x1="1" y1="14" x2="4" y2="14"></line>
+        </svg>
+        Technical Arsenal
+      </h2>
 
       <h3 style="color: var(--accent-cyan); margin-bottom: 16px; margin-top: 0px;">Fullstack Engineering</h3>
       <div class="bento-grid" style="margin-bottom: 40px;">
