--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#projects">Personal Projects</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#experience">Experience</a></li> <!-- Shortened for mobile fit safety -->
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -161,11 +161,11 @@
           <line x1="8" y1="21" x2="16" y2="21"></line>
           <line x1="12" y1="17" x2="12" y2="21"></line>
         </svg>
-        Featured Projects
+        Personal Projects
       </h2>
       <div class="bento-grid">
 
-        <!-- Featured Project: Generations -->
+        <!-- Personal Project: Generations -->
 
         <div class="bento-item col-span-12 project-feature project-card-row">
           <div class="project-content"
