removing deep learning

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <p style="color: #ffffff; font-weight: 600; margin-bottom: 10px; font-size: 14px;">Relevant Coursework:</p>
           <div style="display: flex; gap: 8px; flex-wrap: wrap;">
             <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7641 Machine Learning</span>
-            <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7643 Deep Learning</span>
+            <!-- <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7643 Deep Learning</span> -->
             <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 6601 Artificial Intelligence</span>
             <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 6250 Computer Networks</span>
             <span class="feature-tag" style="margin: 0; font-size: 13px;">CS 7637 Knowledge-Based AI</span>
